fix : Modify out-of-size error on mobile
Correction of errors that do not match the size of the canvas and the size of the image to match the size of the mobile

--- a/src/components/LandingPage/HeroImage/HeroImage.module.css
+++ b/src/components/LandingPage/HeroImage/HeroImage.module.css
@@ -13,7 +13,17 @@
 .hero-image__image {
   grid-area: hero-image;
 
+  z-index: 40;
+  width: auto;
+  height: auto;
+}
+
+.hero-image__canvas {
+  grid-area: hero-image;
   z-index: 60;
+
+  width: 90%;
+  height: 100%;
 }
 
 .hero-image__image-clouds {
